ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringInPropertyName1/input.ts.stderr
error: Unexpected token ```. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringInPropertyName1/input.ts:2:5
  |
2 |     `a`: 321
  |     ^

